# ArtistPreview

./: .gitignore  README_STREAMLIT.md  Taskfile.yml  main.py  pyproject.toml  requirements_streamlit.txt  seriex.toml.example  test_folder_naming.py  test_problematic_brackets.py  test_real_problem.py
artist_preview/: __init__.py  __main__.py
artist_preview/io/: __init__.py  output.py
artist_preview/modes/: intermediate.py  standard.py
artist_preview/scripts/: artist_cache.json  artist_classifier.py
artistpreview/config/: artist_list.yaml
artistpreview/core/: artist_db.py
artistpreview/io/: path_source.py
artistpreview/modes/: text_mode.py
artistpreview/scripts/: artist_preview_table.py
artistpreview/ui/: cli.py  tui.py
scripts/: artist_classify.py  artist_preview  artist_preview.html  artist_preview_table.py
src/artist_preview/: __init__.py  main.py
src/artist_preview/core/: classifier.py
src/artist_preview/modes/: __init__.py
src/crashp/: __init__.py  __main__.py  cli.py  test_crashu_pairs.py
src/crashu/: README.md  __init__.py  __main__.py
src/crashu/core/: app_controller.py  config.py  folder_manager.py  output_manager.py  ui_manager.py
src/linedup/: README.md  __main__.py
src/lista/: README.md  __main__.py  artists_db.json  config.json  画师名.md
src/lista/cli/: app.py  interactive.py
src/lista/core/: models.py  service.py  store.py
src/movea/: README.md  __init__.py  __main__.py  blacklist.toml  config.py  config.toml  file_ops.py  scanner.py  ui.py
src/previewa/: README.md  __main__.py
src/previewa/core/: __init__.py
src/previewa/io/: path_source.py
src/previewa/scripts/: artist_classifier.py  artist_preview_table.py  classified_result.yaml
src/previewa/ui/: __init__.py  artist_preview_streamlit.py  start_streamlit.py
src/samea/: README.md  __main__.py  blacklist.json
src/samea/utils/: move_artist_folders.py  test_extract.py
src/searcha/: cli.py
src/seriex/: __init__.py  cli.py  extractor.py  file_ops.py  grouping.py  known_series.py  seriex.toml  seriex.toml.example  similarity.py  utils.py
src/seriex/tests/: test_decoupling.py
src/serima/: __init__.py  classifier.py  cli.py  utils.py
