[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artistpreview"
version = "0.1.0"
description = "漫画/插图作品按画师分类工具"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip>=1.8.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "textual>=0.22.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ArtistPreview"
"Bug Tracker" = "https://github.com/yourusername/ArtistPreview/issues"

[project.scripts]
artistpreview = "artistpreview.__main__:main"

[tool.setuptools]
package-dir = {"" = "artistpreview"}

[tool.setuptools.packages.find]
where = ["artistpreview"]
include = ["*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
