[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "previewa"
version = "0.1.0"
description = "漫画/插图作品按画师分类工具"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip>=1.8.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "textual>=0.22.0",
    "opencc-python-reimplemented",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/previewa"
"Bug Tracker" = "https://github.com/yourusername/previewa/issues"

[project.scripts]
previewa = "previewa.__main__:main"
samea = "samea.__main__:main"
lista = "lista.__main__:main"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["previewa*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
